--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "@vercel/analytics": "^1.0.0",
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
